# dataops-platform

./: .claudeignore  .gitignore  .mcp.json  CLAUDE.md  GEMINI.md  Makefile  README.md  docker-compose.all.yaml  docker-compose.yaml  fix_controller_tests.sh  fix_imports.sh  fix_infra_imports.sh  fix_missing_imports.sh  fix_query_imports.sh  fix_test_imports.sh
.claude/: README.md  (+2 more)
project-basecamp-connect/: .editorconfig  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
project-basecamp-connect/docs/: PATTERNS.md
project-basecamp-connect/scripts/: schema.sql
project-basecamp-connect/src/: __init__.py
project-basecamp-connect/src/connect/: __init__.py  config.py  database.py  exceptions.py  logging_config.py
project-basecamp-connect/src/connect/clients/: __init__.py  jira.py  slack.py
project-basecamp-connect/src/connect/models/: __init__.py  base.py  closure.py  comment.py  integration.py  jira.py  linking.py  slack.py
project-basecamp-connect/src/connect/services/: __init__.py  jira_monitor.py  jira_slack_integration.py  slack_message.py
project-basecamp-connect/tests/: __init__.py  conftest.py  test_api.py  test_closure_notification.py  test_comment_sync.py  test_database.py  test_integration_api.py  test_jira_client.py  test_jira_monitor_service.py  test_jira_slack_integration.py  test_slack_client.py  test_slack_message_service.py
project-interface-cli/: .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTION.md  Dockerfile  Makefile  README.md  TEST_COVERAGE_GAPS.md  build_standalone.py  dli.spec  main.py  pyproject.toml
project-interface-cli/docs/: PATTERNS.md  TESTING.md
project-interface-cli/features/: AUDIT_FEATURE.md  AUDIT_RELEASE.md  BASECAMP_FEATURE.md  CATALOG_GAP.md  CATALOG_RELEASE.md  DATASET_FEATURE.md  DATASET_RELEASE.md  DEBUG_FEATURE.md  DEBUG_RELEASE.md  ENV_FEATURE.md  ENV_RELEASE.md  EXECUTION_REFACTOR.md  EXECUTION_RELEASE.md  FEATURE.md  FEATURE_CATALOG.md  FEATURE_DAY1.md  FEATURE_DAY1_DONE.md  FEATURE_DAY2.md  FEATURE_DAY3.md  FEATURE_DAY4.md  FEATURE_DAY5.md  FEATURE_DAY6.md  FEATURE_LIBRARY.md  FEATURE_LINEAGE.md  FEATURE_MODEL.md  FEATURE_QUALITY.md  FEATURE_TRANSPILE.md  FEATURE_WORKFLOW.md  FORMAT_FEATURE.md  FORMAT_RELEASE.md  GAP_CATALOG.md  GAP_LINEAGE.md  GAP_QUALITY.md  GAP_TRANSPILE.md  GAP_WORKFLOW.md  LIBRARY_FEATURE.md  LIBRARY_RELEASE.md  LINEAGE_FEATURE.md  METRIC_FEATURE.md  METRIC_RELEASE.md  (+29 more)
project-interface-cli/features/archived/: LINEAGE_GAP.md  MODEL_RELEASE.md  QUALITY_GAP.md  TEST_REFACTOR.md  WORKFLOW_GAP.md
project-interface-cli/research/: RESEARCH_20260101.md
project-interface-cli/src/dataops_cli/: __init__.py  config.py  exceptions.py  logging_config.py  main.py
project-interface-cli/src/dli/: __init__.py  __main__.py  exceptions.py  main.py
project-interface-cli/src/dli/adapters/: __init__.py  bigquery.py  trino.py
project-interface-cli/src/dli/api/: __init__.py  catalog.py  config.py  dataset.py  debug.py  lineage.py  metric.py  quality.py  query.py  run.py  sql.py  transpile.py  workflow.py
project-interface-cli/src/dli/commands/: __init__.py  base.py  catalog.py  config.py  dataset.py  debug.py  info.py  lineage.py  metric.py  quality.py  query.py  render.py  run.py  server.py  sql.py  transpile.py  utils.py  validate.py  version.py  workflow.py
project-interface-cli/src/dli/core/: __init__.py  client.py  config.py  config_loader.py  discovery.py  executor.py  http.py  metric_service.py  models.py  registry.py  renderer.py  service.py  sql_filters.py  templates.py  trace.py  types.py  validator.py
project-interface-cli/src/dli/models/: __init__.py  common.py  config.py  format.py  quality.py  query.py  run.py  sql.py  workflow.py
project-interface-cli/tests/: __init__.py  conftest.py  test_main.py
project-interface-cli/tests/adapters/: __init__.py  test_bigquery.py  test_trino.py
project-interface-cli/tests/api/: test_api_di.py  test_catalog_api.py  test_common.py  test_config_api.py  test_config_api_layered.py  test_dataset_api.py  test_debug_api.py  test_exceptions.py  test_format_api.py  test_lineage_api.py  test_metric_api.py  test_quality_api.py  test_query_api.py  test_run_api.py  test_sql_api.py  test_transpile_api.py  test_workflow_api.py
project-interface-cli/tests/cli/: __init__.py  conftest.py  test_base.py  test_catalog_cmd.py  test_config_cmd.py  test_config_cmd_extended.py  test_dataset_cmd.py  test_debug_cmd.py  test_format_cmd.py  test_info_cmd.py  test_lineage_cmd.py  test_main.py  test_metric_cmd.py  test_quality_cmd.py  test_query_cmd.py  test_run_cmd.py  test_server_cmd.py  test_sql_cmd.py  test_transpile_cmd.py  test_utils.py  test_validate_cmd.py  test_workflow_cmd.py
project-interface-cli/tests/commands/: __init__.py  test_utils_trace.py
project-interface-cli/tests/core/: __init__.py  test_client.py  test_config.py  test_config_loader.py  test_discovery.py  test_executor.py  test_executor_factory.py  test_http.py  test_metric_service.py  test_models.py  test_registry.py  test_renderer.py  test_service.py  test_templates.py  test_trace.py  test_validator.py
project-interface-cli/tests/core/catalog/: __init__.py  test_models.py
project-interface-cli/tests/core/debug/: __init__.py  test_debug_checks.py
project-interface-cli/tests/core/format/: __init__.py  test_sql_formatter.py  test_yaml_formatter.py
project-interface-cli/tests/core/lineage/: test_client.py
project-interface-cli/tests/core/quality/: __init__.py  test_builtin_tests.py  test_executor.py  test_models.py  test_registry.py
project-interface-cli/tests/core/query/: test_models.py
project-interface-cli/tests/core/run/: __init__.py  test_models.py
project-interface-cli/tests/integration/: __init__.py  conftest.py  docker-compose.trino.yaml  test_debug_integration.py  test_format_integration.py  test_run_integration.py  test_spec_execution_integration.py  test_trino_integration.py
project-interface-cli/tests/models/: __init__.py  test_config_models.py  test_debug_models.py  test_execution_context_factory.py  test_format_models.py  test_run_models.py
(+1207 files in other folders)
