[project]
name = "project-basecamp-connect"
version = "0.1.0"
description = "Integration Service for DataOps Platform - GitHub, Jira, and Slack integration"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.2",
    "pydantic>=2.9.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-flask>=1.3.0",
    "black>=24.0.0",
    "ruff>=0.6.0",
    "pyright>=1.1.390",
    "pre-commit>=3.5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/connect"]

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]
include = ["*.py", "*.pyi", "**/pyproject.toml"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "S",   # flake8-bandit
    "T20", # flake8-print
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    "PL",  # pylint
    "TRY", # tryceratops
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",    # line too long, handled by black
    "B008",    # do not perform function calls in argument defaults
    "C901",    # too complex
    "S101",    # use of assert
    "S104",    # hardcoded bind all interfaces
    "S105",    # hardcoded password string
    "S106",    # hardcoded password function
    "S107",    # hardcoded password default
    "S108",    # hardcoded temp file
    "S113",    # request without timeout
    "PLR0912", # too many branches
    "PLR0913", # too many arguments
    "PLR0915", # too many statements
    "TRY003",  # avoid specifying long messages outside exception class
    "ARG001",  # unused function argument
    "PTH123",  # open() should be replaced by Path.open()
    "PLW0603", # Using global statement is discouraged (needed for singleton pattern)
    "TRY400",  # Use logging.exception instead of logging.error
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["S101", "PLR2004", "ARG", "FBT", "PLC0415"]

[tool.ruff.lint.isort]
known-first-party = ["connect"]
force-sort-within-sections = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src", "main.py", "tests"]
exclude = ["**/__pycache__", "**/.mypy_cache", "**/.pytest_cache"]

reportMissingImports = true
reportMissingTypeStubs = false
reportUntypedFunctionDecorator = false
reportUnknownParameterType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownMemberType = false
reportUnusedImport = false
reportUnusedFunction = false
reportUnnecessaryComparison = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--strict-markers",
    "--strict-config",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv", ".pytest_cache"]
skips = ["B101"]  # Skip assert_used test

[tool.bandit.assert_used]
exclude = ["*test*.py", "*conftest.py"]
